[package]
name = "httpscan"
version = "0.1.0"
authors = ["nxnjz <nxnjz@nxnjz.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.10", features=["blocking", "gzip", "brotli"]}
clap = "2.33"
serde_json = "1.0"
scraper="0.12"
